# ml-api-deployment

./: .dockerignore  .env.example  .env.exemple  .gitignore  Dockerfile  README.md  gradio_app.py  pyproject.toml  pytest.ini  requirements.txt  ui_gradio.py
.github/workflows/: ci-cd.yml  main.yml
app/: API.py  main.py
docs/: README.md  analytical_requirements.md  data_processes.md  database_schema.md  security.md  technical_choices.md
infra/: config.py  create_db.py  db.py  db_utils.py  ingest_csv.py  models.py
models/: model_emissions_co2.joblib  model_metadata.joblib
src/: model.py  payload_setup.py  train_and_save.py  ville_de_seattle.csv
tests/: README.md  conftest.py  test_api.py  test_db.py  test_db_utils.py  test_model.py  test_model_with_real_data.py  test_train_and_save.py
