[tool.poetry]
name = "projet_5"
version = "0.1.0"
description = "Mise en production de model ML"
authors = ["LyAbdourahmane <lyabdourahamane66@gmail.com>"]
package-mode = false
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.12"
fastapi = ">=0.116.1,<0.117.0"
pydantic = ">=2.11.7,<3.0.0"
sqlalchemy = ">=2.0.43,<3.0.0"
psycopg2-binary = ">=2.9.10,<3.0.0"
pytest = ">=8.4.1,<9.0.0"
pytest-cov = ">=6.2.1,<7.0.0"
httpx = ">=0.28.1,<0.29.0"
uvicorn = "^0.35.0"
pandas = "^2.3.1"
numpy = "^2.3.2"
scikit-learn = "^1.7.1"
joblib = "^1.5.1"
datetime = "^5.5"
xgboost = "^3.0.4"
gradio = "^5.43.1"
requests = "^2.32.5"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
